@@ -1,118 +1,136 @@
 package tn.gest.fourni.service;
 
+import tn.gest.fourni.DTO.FournisseurDTO;
+import tn.gest.fourni.Mapper.FournisseurMapper;
 import tn.gest.fourni.models.Fournisseur;
 import tn.gest.fourni.repository.FournisseurRepository;
+
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class FournisseurService {
 
-    private final FournisseurRepository fournisseurRepository;
+    @Autowired
+    private FournisseurRepository fournisseurRepository;
 
-    public FournisseurService(FournisseurRepository fournisseurRepository) {
-        this.fournisseurRepository = fournisseurRepository;
-    }
+    @Autowired
+    private FournisseurMapper fournisseurMapper;
 
-    // CRUD Operations
-    
     /**
      * Crée un nouveau fournisseur
      */
-    public Fournisseur createFournisseur(Fournisseur fournisseur) {
+    public FournisseurDTO createFournisseur(FournisseurDTO dto) {
+        Fournisseur fournisseur = fournisseurMapper.toEntity(dto);
         if (fournisseur.getNote() == null) {
-            fournisseur.setNote(3.0); // Note par défaut
+            fournisseur.setNote(3.0); // note par défaut
         }
-        return fournisseurRepository.save(fournisseur);
+        return fournisseurMapper.toDTO(fournisseurRepository.save(fournisseur));
     }
 
     /**
      * Récupère tous les fournisseurs
      */
-    public List<Fournisseur> getAllFournisseurs() {
-        return fournisseurRepository.findAll();
+    public List<FournisseurDTO> getAllFournisseurs() {
+        return fournisseurRepository.findAll()
+                .stream()
+                .map(fournisseurMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
     /**
      * Récupère un fournisseur par son ID
      */
-    public Fournisseur getFournisseurById(Long id) {
-        return fournisseurRepository.findById(id)
+    public FournisseurDTO getFournisseurById(Long id) {
+        Fournisseur fournisseur = fournisseurRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Fournisseur non trouvé avec l'ID : " + id));
+        return fournisseurMapper.toDTO(fournisseur);
     }
 
     /**
-     * Met à jour un fournisseur existant
+     * Met à jour un fournisseur
      */
-    public Fournisseur updateFournisseur(Long id, Fournisseur fournisseurDetails) {
-        Fournisseur fournisseur = getFournisseurById(id);
-        
-        fournisseur.setNom(fournisseurDetails.getNom());
-        fournisseur.setContact(fournisseurDetails.getContact());
-        fournisseur.setQualiteService(fournisseurDetails.getQualiteService());
-        fournisseur.setNote(fournisseurDetails.getNote());
-        
-        return fournisseurRepository.save(fournisseur);
+    public FournisseurDTO updateFournisseur(Long id, FournisseurDTO dto) {
+        Fournisseur fournisseur = fournisseurRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Fournisseur non trouvé avec l'ID : " + id));
+
+        fournisseur.setNom(dto.getNom());
+        fournisseur.setContact(dto.getContact());
+        fournisseur.setQualiteService(dto.getQualiteService());
+        fournisseur.setNote(dto.getNote());
+
+        return fournisseurMapper.toDTO(fournisseurRepository.save(fournisseur));
     }
 
     /**
      * Supprime un fournisseur
      */
     public void deleteFournisseur(Long id) {
-        Fournisseur fournisseur = getFournisseurById(id);
+        Fournisseur fournisseur = fournisseurRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Fournisseur non trouvé avec l'ID : " + id));
         fournisseurRepository.delete(fournisseur);
     }
 
-    // Custom Business Methods
-    
     /**
      * Trouve les fournisseurs par nom
      */
-    public List<Fournisseur> findFournisseursByNom(String nom) {
-        return fournisseurRepository.findByNom(nom);
+    public List<FournisseurDTO> findFournisseursByNom(String nom) {
+        return fournisseurRepository.findByNom(nom)
+                .stream()
+                .map(fournisseurMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
     /**
      * Trouve les fournisseurs par qualité de service
      */
-    public List<Fournisseur> findFournisseursByQualiteService(String qualiteService) {
-        return fournisseurRepository.findByQualiteService(qualiteService);
+    public List<FournisseurDTO> findFournisseursByQualiteService(String qualiteService) {
+        return fournisseurRepository.findByQualiteService(qualiteService)
+                .stream()
+                .map(fournisseurMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
     /**
      * Récupère les fournisseurs triés par note décroissante
      */
-    public List<Fournisseur> getFournisseursByNoteDesc() {
-        return fournisseurRepository.findByOrderByNoteDesc();
+    public List<FournisseurDTO> getFournisseursByNoteDesc() {
+        return fournisseurRepository.findByOrderByNoteDesc()
+                .stream()
+                .map(fournisseurMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
     /**
      * Évalue un fournisseur et met à jour sa note
      */
-    public Fournisseur evaluerFournisseur(Long id, Double nouvelleNote) {
+    public FournisseurDTO evaluerFournisseur(Long id, Double nouvelleNote) {
         if (nouvelleNote < 0 || nouvelleNote > 5) {
             throw new IllegalArgumentException("La note doit être comprise entre 0 et 5");
         }
 
-        Fournisseur fournisseur = getFournisseurById(id);
-        
-        // Calcul de la nouvelle note (moyenne entre ancienne et nouvelle note)
+        Fournisseur fournisseur = fournisseurRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Fournisseur non trouvé avec l'ID : " + id));
+
         double noteMiseAJour = (fournisseur.getNote() + nouvelleNote) / 2;
         fournisseur.setNote(noteMiseAJour);
-        
-        return fournisseurRepository.save(fournisseur);
+
+        return fournisseurMapper.toDTO(fournisseurRepository.save(fournisseur));
     }
 
     /**
      * Récupère les fournisseurs avec une note supérieure ou égale à la valeur spécifiée
      */
-    public List<Fournisseur> getFournisseursWithNoteAbove(Double noteMinimale) {
+    public List<FournisseurDTO> getFournisseursWithNoteAbove(Double noteMinimale) {
         return fournisseurRepository.findByOrderByNoteDesc()
                 .stream()
                 .filter(f -> f.getNote() >= noteMinimale)
-                .toList();
+                .map(fournisseurMapper::toDTO)
+                .collect(Collectors.toList());
     }
 }
